[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qbo-webhook-relay"
version = "0.1.0"
description = "QuickBooks webhook relay with Costco filtering and Slack/Twilio notifications."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115,<1.0",
  "httpx>=0.27,<1.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "uvicorn>=0.30,<1.0",
]

[tool.setuptools]
packages = ["app"]
